--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
-
+<header class="header">
+  <div class="logo"></div>
+  <nav class="nav">
+      <div class="menu ">
+        <ul>
+          <li><a href="#" class ="links">Spaceships</a></li>
+          <li><a href="#" class ="links">Planets</a></li>
+          <li><a href="#" class ="links">Races</a></li>
+        </ul>
+      </div>
+</header>
 <body>
   <main>
 
