Add the footer section

--- a/src/index.html
+++ b/src/index.html
@@ -10,21 +10,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
-<header class="header">
-  <div class="logo">logo</div>
-  <nav class="nav">
-        <ul>
-          <li><a href="#" class ="links links1">Spaceships</a></li>
-          <li><a href="#" class ="links links2">Planets</a></li>
-          <li><a href="#" class ="links links3">Races</a></li>
-        </ul>
-  </nav>
-</header>
+
 <body>
+  <header class="header">
+    <div class="logo">logo</div>
+    <nav class="nav">
+          <ul>
+            <li><a href="#" class ="links links1">Spaceships</a></li>
+            <li><a href="#" class ="links links2">Planets</a></li>
+            <li><a href="#" class ="links links3">Races</a></li>
+          </ul>
+    </nav>
+  </header>
   <main>
 
-
   </main>
+  <footer class="footer"><h3>Created by Microverse under CC license</h3></footer>
 </body>
 
 </html>
