Change html to display items dynamically

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,11 @@
     </nav>
   </header>
   <main>
+    <section class="main-section">
+      <ul class="items-list">
+        
+      </ul>
+    </section>
 
   </main>
   <footer class="footer"><h3>Created by Microverse under CC license</h3></footer>
