--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header class="header">
-    <div class="logo">logo</div>
+    <div class="logo"><img src="https://static.tvmaze.com/images/tvm-header-logo.png" alt=""></div>
     <nav class="nav">
           <ul>
             <li><a href="#" class ="links links1">Spaceships</a></li>
@@ -25,7 +25,7 @@
   <main>
     <section class="main-section">
       <ul class="items-list">
-        
+
       </ul>
     </section>
 
