--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,12 @@
   <main>
     <section class="main-section">
       <ul class="items-list">
-
       </ul>
+      <div class="details">
+        <div class= "pop-body">
+
+        </div>
+      </div>
     </section>
 
   </main>
