--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <div class="logo"><img src="https://static.tvmaze.com/images/tvm-header-logo.png" alt=""></div>
     <nav class="nav">
           <ul>
-            <li><a href="#" class ="links links1">Spaceships</a></li>
+            <li><a href="#" class ="links links1">Tv shows (<span class="count"></span>)</a></li>
             <li><a href="#" class ="links links2">Planets</a></li>
             <li><a href="#" class ="links links3">Races</a></li>
           </ul>
