--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,11 @@
     </section>
 
   </main>
-  <footer class="footer"><h3>Created by Microverse under CC license</h3></footer>
+  <footer class="footer"><h3>
+	Created by
+	<a href="https://github.com/codedit334">Oussama Elabdioui</a>,
+	<a href="https://github.com/ilyassatlassi">Ilyass Atlassi</a>, 
+  </h3></footer>
 </body>
 
 
