Fix linter errors

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="author" content="Oussama @codedit334; Ilyass @Ilyassatlassi">
-  <meta name="description" content="TV Shows display Webapp">
-  <meta name="keywords" content="Capstone-JS,TV show, API, webpack, ES6">
+  <meta name="author" content="Oussama @codedit334; Ilyass @Ilyassatlassi"/>
+  <meta name="description" content="TV Shows display Webapp"/>
+  <meta name="keywords" content="Capstone-JS,TV show, API, webpack, ES6"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -42,8 +42,5 @@
 	<a href="https://github.com/ilyassatlassi">Ilyass Atlassi</a>, 
   </h3></footer>
 </body>
-
-
-
 
 </html>
