--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <!-- <header class="header">
+  <header class="header">
     <div class="logo"><img src="https://static.tvmaze.com/images/tvm-header-logo.png" alt="logo"></div>
     <nav class="nav">
       <ul>
@@ -43,7 +43,7 @@
       <a href="https://github.com/codedit334">Oussama Elabdioui</a>,
       <a href="https://github.com/ilyassatlassi">Ilyass Atlassi</a>,
     </h3>
-  </footer> -->
+  </footer>
 </body>
 
 </html>
