--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
     <nav class="nav">
       <ul>
         <li><a href="#" class="links links1">Tv shows - <span class="count"></span></a></li>
-        <li><a href="#" class="links links2">Girls</a></li>
         <li><a href="#" class="links links3">Series</a></li>
+        <li><a href="#" class="links links2">FAQs</a></li>
       </ul>
     </nav>
   </header>
