--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
     <h3>
       Created by
       <a href="https://github.com/codedit334">Oussama Elabdioui</a>,
-      <a href="https://github.com/ilyassatlassi">Ilyass Atlassi</a>,
+      <a href="https://github.com/ilyassatlassi">Ilyass Atlassi</a>.
     </h3>
   </footer>
 </body>
