Add search functionality

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,9 @@
   </header>
   <main>
     <section class="main-section">
+      <div class="items-search">
+        <input class="items-search-input" placeholder="Search a show" onkeypress="searchData(this.value,event)"/>
+      </div>
       <ul class="items-list">
       </ul>
       <div class="details">
